--- a/style.css
+++ b/style.css
@@ -147,7 +147,6 @@
 }
 
 .insta p {
-
   color: rgba(39, 39, 39, 0.6);
   font-size: 18px;
   font-weight: 400;
@@ -158,3 +157,43 @@
   display: flex;
   justify-content: space-between;
 }
+.latest-deal {
+  margin-top: 125px;
+  height: 450px;
+  background-image: url(flower-asset/Rectangle\ 9.png);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.latest-deal h2 {
+  color: #272727;
+
+  font-size: 40px;
+  font-weight: 800;
+}
+.latest-deal p {
+  color: rgba(39, 39, 39, 0.6);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+}
+.ld{
+    margin-top: 45px ;
+   border: 2px solid red;
+}
+.ld input {
+  width: 700px;
+  
+  padding: 23px ;
+  border-radius: 8px;
+  border-width: 0;
+  margin-right: 10px;
+  
+}
+::placeholder {
+  color: rgba(39, 39, 39, 0.6);font-size: 16px;
+  font-weight: 400;
+}
+
