--- a/style.css
+++ b/style.css
@@ -222,3 +222,9 @@ line-height: 35px;
   padding: 24px 0px 32px 0px;
   /* margin: 24px 0px 32px 0px; */
 }
+.copyright{
+color: rgba(255, 255, 255, 0.40);  
+text-align: center;
+font-size: 16px;
+font-weight: 400;
+}
