--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@
   margin: 0;
   font-family: "Lato", sans-serif;
 }
+.primary-p  {
+  margin: 30px 0px;
+  color: rgba(39, 39, 39, 0.6);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+}
+
 
 .header-bg {
   height: 850px;
@@ -22,13 +30,7 @@
   font-weight: 800;
   color: #272727;
 }
-.primary-p  {
-  margin: 30px 0px;
-  color: rgba(39, 39, 39, 0.6);
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 30px;
-}
+
 
 .banner-img {
   padding-top: 50px;
@@ -75,13 +77,7 @@
   font-weight: 700;
 }
 
-.flower-img {
-  height: 540px;
-  width: 465px;
-  margin-bottom: 32px;
-  border-radius: 300px 300px 0px 0px;
-  background: rgba(167, 33, 98, 0.15);
-}
+
 .first,
 .second {
   /* display: block; */
@@ -95,6 +91,25 @@
   position: relative;
   bottom: -68px;
 }
+.flower-img1{
+  height: 540px;
+  width: 465px;
+  margin-bottom: 32px;
+  border-radius: 300px 300px 0px 0px;
+  background: rgba(167, 33, 98, 0.15);
+
+}
+
+.flower-img2{
+  height: 540px;
+  width: 465px;
+  margin-bottom: 32px;
+  background: #DDEFFB;
+  
+}
+
+
+
 
 .service {
   width: 1440px;
@@ -227,4 +242,4 @@ color: rgba(255, 255, 255, 0.40);
 text-align: center;
 font-size: 16px;
 font-weight: 400;
-}
+} 
