--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
   line-height: 30px;
 }
 
+/* .primary-h2{
+
+} */
 
 .header-bg {
   height: 850px;
@@ -224,6 +227,43 @@ line-height: 35px;
   font-size: 48px;
   font-weight: 800;
 }
+
+.user-review{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;  
+  height: 450px;
+  /* background: rgba(229, 84, 115, 0.05); */
+}
+.ur{
+  color: #272727;
+  margin-bottom: 10px;
+  font-size: 40px;
+  font-weight: 800;
+  text-align: center;
+}
+
+.user{
+  max-width: 250px;
+  text-align: center;
+  line-height: 20px;
+}
+
+.user-review img{  
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin: 30px;
+  border: 1px solid #111010;
+}
+.border{
+  border-right: 2px solid black;
+  padding-right: 100px;
+}
+
+
+
+
 .clr {
   color: #e55473;
 }
