Assignment1 Done with bonus part

--- a/style.css
+++ b/style.css
@@ -242,7 +242,10 @@ line-height: 35px;
   font-weight: 800;
   text-align: center;
 }
-
+.person{
+  /* padding-top: 10px; */
+  font-size: 18px;
+}
 .user{
   max-width: 250px;
   text-align: center;
